# AbstractEngine

./: .gitignore  AppleMetalTest.h  AppleMetalTest.mm  CMakeLists.txt  CMakePresets.json  MainIOS.mm  MainWindows.cpp  MetalTestLayer.h  MetalTestLayer.mm  OpenGL Starter.cpp  OpenGL Starter.h  README.md  Starter.cpp  Starter.h  genetrate-ios.sh  ios-codesign.sh
Application/: AbstractApplication.cpp  AbstractApplication.h
Application/Core/: Base.h  Layer.h  LayerStack.cpp  LayerStack.h
Application/Events/: Event.h  Input.cpp  Input.h
Application/Events/Codes/: KeyCodes.h  MouseCodes.h
Application/Events/EventTypes/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Application/ImGuiHandler/: ImGuiHandler.cpp  ImGuiHandler.h  ImGuiHandlerMetal.mm  ImGuiHandlerOpenGL.cpp
Application/Window/: Window.cpp  Window.h
Application/Window/Platform/: IOSWindow.h  IOSWindow.mm  MacOSWindow.h  MacOSWindow.mm  WindowsWindow.cpp  WindowsWindow.h
Application/Window/Platform/InputManager/: InputManager.cpp  InputManager.h
Graphics/: GraphicsBase.h  GraphicsCore.h  stb_image_impl.cpp
Graphics/Platform/Metal/: MetalBuffer.cpp  MetalBuffer.h  MetalComputeShader.cpp  MetalComputeShader.h  MetalContext.h  MetalContext.mm  MetalFramebuffer.cpp  MetalFramebuffer.h  MetalRendererAPI.cpp  MetalRendererAPI.h  MetalShader.cpp  MetalShader.h  MetalTexture.cpp  MetalTexture.h  MetalUniformBuffer.cpp  MetalUniformBuffer.h  MetalVertexArray.cpp  MetalVertexArray.h
Graphics/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Graphics/Renderer/: 2DCamera.cpp  2DCamera.h  3DCamera.cpp  3DCamera.h  BatchRenderer.cpp  BatchRenderer.h  Buffer.cpp  Buffer.h  Camera.h  ComputeShader.cpp  ComputeShader.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
ImGuiHandler/: ImGuiHandler.h
Resources/ComputeShaders/: JFAComposite.glsl  JFAComposite.msl  JFAPass.glsl  JFAPass.msl  JFASeed.glsl  JFASeed.msl  JFAVisualize.glsl  JFAVisualize.msl
Resources/Shaders/: BasicShader.glsl  CircleShader.glsl  GLBufferDeclarations.h  Grid.glsl  Grid2D.glsl  GridCalculation.h  GridParameters.h  JumpFloodComposite.glsl  JumpFloodInit.glsl  JumpFloodInit2.glsl  JumpFloodPass.glsl  LineShader.glsl  SelectedObject.glsl  Text.h  TriangleShader.glsl
Resources/Shaders/OIT/: ShaderCommon.glsl  oitColorDepthDefines.glsl  oitCompositeDefines.glsl  oitOpaque.frag.glsl  oitSimple.glsl
Utils/: DataTypes.h
Utils/IOS/: FileUtils.h  FileUtils.mm
cmake/: IOS-helpers.cmake
